<resources>
    <string name="app_name">e.beat</string>
    <string name="menu_pressure_input">New input</string>
    <string name="menu_input_history">History</string>
    <string name="menu_settings">Settings</string>
    <string name="save_reading">Save</string>
    <string name="input_description">Input description</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="are_you_sure">Save reading?</string>
    <string name="add_reading">Add reading</string>
    <string name="current_weight">Current weight</string>
    <string name="set">Set</string>
    <string name="edit_users">Edit users</string>
    <string name="add_user">Add a user</string>
    <string name="time_description">Time</string>
    <string name="date_description">Date</string>
    <string name="systolic">Systolic</string>
    <string name="diastolic">Diastolic</string>
    <string name="pulse">Pulse</string>
    <string name="numberInputInvalid">Only numbers allowed</string>
    <string name="reading_section">Reading</string>
    <string name="select_user">Select user</string>
    <string name="choose_user_title">Choose a user</string>
    <string name="severity_waiting">Awaiting input</string>
    <string name="reading_saved">Reading successfully saved</string>
    <string name="username">User name</string>
    <string name="week">7 days</string>
    <string name="month">30 days</string>
    <string name="all_time">All time</string>
    <string name="range">Range</string>
    <string name="no_entries_for_period">No entries for selected period</string>
    <string name="cancel">Cancel</string>
    <string name="save_description">Saving will add currently entered values to a list of readings for selected user.</string>
    <string name="save_user">Save new user</string>
    <string name="cancel_add_user">Cancel adding user</string>
    <string name="menu_graphs">Graphs</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="privacy_policy_url">https://sites.google.com/view/ebeat-privacypolicy/home</string>
    <string name="ad_settings">Advertisement settings</string>
    <string name="delete">Delete</string>
    <string name="delete_reading_title">Delete reading?</string>
    <string name="delete_reading_description">Saved reading will be permanently deleted.</string>


    <!--  New   -->

    <!--    Actions    -->

    <string name="actions_title">What would you like to do?</string>
    <string name="actions_add_reading">Add a new reading</string>
    <string name="actions_view_readings">See previous readings</string>
    <string name="actions_view_graph">See a history graph</string>
    <string name="actions_manage_users">Manage app users</string>
    <string name="actions_edit_settings">View app info</string>

    <!--               -->
    <!--    Reading    -->
    <!--               -->


    <string name="reading_user">Add a new reading for {first}</string>
    <string name="reading_date">taken on {first} at {second}</string>
    <string name="reading_systolic">Systolic pressure: {first} mmHg</string>
    <string name="reading_diastolic">Diastolic pressure: {first} mmHg</string>
    <string name="reading_pulse">Pulse: {first} bpm</string>

    <!--  Questions  -->
    <string name="question_add_reading_for">Whose blood pressure was measured?</string>
    <string name="question_reading_taken_on">When was the measurement taken?</string>
    <string name="question_systolic_value">What was the systolic pressure value?</string>
    <string name="question_diastolic_value">What was the diastolic pressure value?</string>
    <string name="question_pulse_value">What was the measured heart rate (pulse)?</string>
    <string name="question_next_action">What do you want to do next?</string>
    <string name="question_confirm_discard">Are you sure you want to discard the entry?</string>

    <!--  Answers  -->
    <string name="answer_reading_taken_now">Just now</string>
    <string name="answer_reading_taken_other">Other</string>
    <string name="answer_add_description">Add a description</string>
    <string name="answer_save_reading">Save the reading</string>
    <string name="answer_discard">Discard this</string>
    <string name="question_description">Enter the description</string>
    <string name="description_confirm">Confirm</string>
    <string name="answer_discard_confirm">Yes, discard it</string>
    <string name="answer_discard_decline">No, keep it</string>


    <!--                   -->
    <!--  User management  -->
    <!--                   -->


    <!--  Questions  -->
    <string name="user_option_question">These are your application users.\nWhat would you like to do?</string>
    <string name="question_new_user">What is the name of the new user?</string>
    <string name="question_delete_user_which">Tap on a user you wish to delete.</string>
    <string name="question_confirm_delete_user">Are you sure you want to delete {first}?</string>

    <!--  Answers  -->
    <string name="answer_add_user">Add a new user</string>
    <string name="answer_delete_user">Delete a user</string>
    <string name="answer_go_back">Nothing, go back</string>
    <string name="answer_confirm_delete_user">Yes, delete it</string>
    <string name="answer_cancel_delete_user">No, don\'t delete it</string>
    <string name="answer_abort_delete_pick">I don\'t want to delete a user</string>


    <string name="question_view_graph_for">For which user would you like to see the graph?</string>
    <string name="question_view_list_for">For which user would you like to see the readings?</string>
    <string name="question_graph_date_range">Which time period you want to see in the graph?</string>
    <string name="question_list_date_range">For which time period would you like to see the readings?</string>
    <string name="answer_select_month">Last 30 days</string>
    <string name="answer_select_all">All readings</string>
    <string name="answer_select_range">Specific range</string>
    <string name="answer_selection_change">Change selection</string>
    <string name="question_reading_saved">Reading saved.</string>
    <string name="answer_ok">OK</string>
    <string name="question_list_empty">There are no saved readings for selected time period.</string>
    <string name="answer_change_selection">Change selection</string>
    <string name="answer_readings_exit">Exit reading overview</string>
    <string name="bp_unit">mmHg</string>
    <string name="pulse_unit">bpm</string>

    <string name="severity_error">There is an input error</string>
    <string name="severity_normal">This indicates normal blood pressure</string>
    <string name="severity_elevated">This indicates elevated blood pressure</string>
    <string name="severity_hypertension1">This indicates high blood pressure (first stage of hypertension)</string>
    <string name="severity_hypertension2">This indicates high blood pressure (second stage of hypertension)</string>
    <string name="severity_crisis">This indicates hypertensive crisis. If the reading is taken recently, consulting with your doctor is recommended.</string>


    <!--    Update description strings-->

    <string name="update_flow_description">Welcome back to e.beat!\nWe\'ve redesigned the app to make it even easier to use!\nWe hope you enjoy it and are looking forward to your feedback.</string>
    <string name="update_flow_start">Let\'s start!</string>
    <string name="closeScreen">Close</string>

</resources>
