<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/chipScroll"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="8dp"
    android:paddingBottom="8dp">

    <LinearLayout
        android:id="@+id/chipGroup"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:clipToPadding="false"
        android:orientation="horizontal"
        android:paddingStart="8dp"
        android:paddingEnd="8dp">

        <com.google.android.material.chip.Chip
            android:id="@+id/week"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/week"
            android:textColor="@drawable/chip_text_color_selector"
            app:checkedIconEnabled="false"
            app:chipBackgroundColor="@drawable/chip_background_selector"
            app:rippleColor="@color/lightPrimary" />

        <com.google.android.material.chip.Chip
            android:id="@+id/month"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/month"
            android:textColor="@drawable/chip_text_color_selector"
            app:checkedIconEnabled="false"
            app:chipBackgroundColor="@drawable/chip_background_selector"
            app:rippleColor="@color/lightPrimary" />

        <com.google.android.material.chip.Chip
            android:id="@+id/allTime"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/all_time"
            android:textColor="@drawable/chip_text_color_selector"
            app:checkedIconEnabled="false"
            app:chipBackgroundColor="@drawable/chip_background_selector"
            app:rippleColor="@color/lightPrimary" />

        <com.google.android.material.chip.Chip
            android:id="@+id/range"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/range"
            android:textColor="@drawable/chip_text_color_selector"
            app:checkedIconEnabled="false"
            app:chipBackgroundColor="@drawable/chip_background_selector"
            app:rippleColor="@color/lightPrimary" />

    </LinearLayout>

</merge>